20221002 完成根据csv自动化提取特征的程序，效率10s/个